@@ -8,6 +8,7 @@ afs.m4 \
 assert.m4 \
 bison.m4 \
 c-bs-a.m4 \
+c-stack.m4 \
 check-decl.m4 \
 chown.m4 \
 codeset.m4 \
